--- a/class1html/index3.html
+++ b/class1html/index3.html
@@ -9,8 +9,8 @@
     
  github/Devpaliya
 </a> <br>
-<a href="https://www.google.com/">
-    google
+<a href="https://www.youtube.com/">
+    youtube
 </a> <br>
 <a href="https://www.linkedin.com/Dev paliya"> linkedin/Dev paliya </a>
     </body>
