style and a tag etc

--- a/class1html/index3.html
+++ b/class1html/index3.html
@@ -5,6 +5,22 @@
 
     </head>
     <body>
+
+<H1 style="color: brown;"> resume of dev paliya </H1>
+<h2 style="color: aquamarine;">dev paliya</h2>
+<h3 style="color: blanchedalmond;">ghru</h3>
+<h4 style=" color: #360558;"> ghrstu</h4>
+<h5 style="color: aqua;background-color: black;"> mcA</h5>
+<h6 style="color: blue;"> bsc it</h6>
+<p style=" text-align: justifyj;   color: brown;"> i am dev paliya i am currently pursuing mca from ghrstu i have completed my ug degree in bsc it from ghrstu i have completed my hsc from st paul and scc from shreyas convent i am aiming to become a full stack developer</p>
+<p style=" font-size:35px ;">
+    I AM DEV PALIYA
+</p>
+
+
+
+<p style ="text-align: center;">  lock       </p>
+
 <a href="https://github.com/Devpaliya">
     
  github/Devpaliya
@@ -13,5 +29,13 @@
     youtube
 </a> <br>
 <a href="https://www.linkedin.com/Dev paliya"> linkedin/Dev paliya </a>
-    </body>
+   
+<br>
+
+
+ <img src="https://images.unsplash.com/photo-1741082212669-4566cf0077f1?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height= "100px" width= "80px"alt="image didnt load line 18">
+
+
+
+</body>
 </html>
