--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
         <label for="username">username</label> <br>
         <input type="text"> <br>
         <label for="password"> password</label> <br> 
-         <input type="" name="password"> <br> <br>
+         <input type="password" name="password"> <br> <br>
          <button>submit</button>
     </form>
     
